--- a/styles/dashboard.module.css
+++ b/styles/dashboard.module.css
@@ -89,12 +89,13 @@
 }
 
 .filterBar__container {
-    width: 75%;
-    height: 50px;
+    width: 90%;
+    height: auto;
 
     margin-top: 5vh;
 
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 
@@ -109,7 +110,7 @@
 
 .filterBar__container .ordering {
     width: auto;
-    height: 100%;
+    height: 40px;
 
     padding: 0% 2%;
 
@@ -123,6 +124,7 @@
 }
 
 .filterBar__container p {
+    margin: 0;
     margin-right: 5px;
 
     font-weight: 700;
@@ -157,7 +159,7 @@
 
 .filterBar__container .direction {
     width: auto;
-    height: 100%;
+    height: 40px;
 
     padding: 0% 2%;
 
@@ -374,9 +376,6 @@
 
     .filterBar__container {
         width: 90%;
-        height: auto;
-
-        flex-direction: column;
     }
 
     .filterBar__container a {
@@ -385,7 +384,6 @@
 
     .filterBar__container p {
         font-style: italic;
-        align-self: flex-start;
     }
 
     .filterBar__container .ordering {
@@ -407,7 +405,6 @@
 
         justify-content: space-between;
         align-items: center;
-
     }
 
     .filterBar__container .direction div {
