--- a/styles/admin/admin.module.css
+++ b/styles/admin/admin.module.css
@@ -10,23 +10,23 @@
 .summaries__wrapper {
     width: 50vw;
 
-    padding: 20px;
-
     display: flex;
     flex-direction: column;
 }
 
 .summaries__header {
-    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    padding: 10px;
+    padding-bottom: 0px;
+    padding-top: 20px;
 
     color: var(--text-color-1)
 }
 
 .summaries {
-    width: 100%;
     max-height: 70vh;
     overflow-y: scroll;
 
@@ -109,8 +109,6 @@
 .display__wrapper {
     width: 50vw;
 
-    padding: 20px;
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -120,5 +118,29 @@
     width: 100%;
     height: 70vh;
 
+    margin: 20px;
+
     border-radius: var(--border-radius-large);
+}
+
+@media only screen and (max-width: 600px) {
+    .main__container {
+        flex-direction: column;
+    }
+
+    .summaries__wrapper {
+        width: 100%;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .display__wrapper {
+        width: 100%;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
