--- a/styles/gamepage/reviewCard.module.css
+++ b/styles/gamepage/reviewCard.module.css
@@ -7,12 +7,7 @@
 
     border-radius: var(--border-radius-small);
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
     cursor: pointer;
-
     transition: 0.25s ease-in-out;
 }
 
@@ -20,16 +15,48 @@
     background: var(--theme-color-tone-2);
 }
 
+.card__main {
+    width: 100%;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card__sub {
+    width: 100%;
+
+    margin-top: 5px;
+
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.hashtag {
+    padding: 5px;
+    margin: 5px 15px 0px 0px;
+
+    font-size: 8px;
+    font-weight: 600;
+
+    color: var(--text-color-3);
+    background: var(--theme-color-tone-2);
+    border-radius: var(--border-radius-large);
+}
+
 .card__image {
     width: 5%;
     height: 100%;
+
+    font-size: 0.75rem;
 
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.card__image h1{
+.card__image h1 {
     height: 100%;
     display: flex;
     justify-content: center;
@@ -39,7 +66,7 @@
     opacity: 0.5;
 }
 
-.card__image .rotate svg{
+.card__image .rotate svg {
     transform: rotate(-45deg);
 }
 
@@ -51,7 +78,7 @@
     align-items: center;
 }
 
-.card__mid .card__mid__text{
+.card__mid .card__mid__text {
     width: 40%;
     display: flex;
     flex-direction: column;
@@ -84,6 +111,9 @@
 }
 
 .card__score {
+    width: 10%;
+    display: flex;
+    justify-content: flex-end;
     margin: 0 15px;
 
     color: var(--text-color-1);
@@ -92,23 +122,21 @@
 }
 
 @media only screen and (max-width: 1200px) {
-    .card__image{
-        width: 33%;
-        margin-right: 15px;
+    .card__image {
+        width: 10%;
     }
 
-    .card__score {
-        width: 10%;
+    .card__mid .card__mid__text {
+        padding: 0 10px;
     }
 }
 
 @media only screen and (max-width: 600px) {
     .card {
-        margin: 10px 0;
+        background: var(--theme-color-tone-2);
     }
 
-    .card__image{
-        width: 20%;
-        margin-right: 25px;
+    .card__image {
+        width: auto;
     }
 }
