--- a/styles/nav/navBar.module.css
+++ b/styles/nav/navBar.module.css
@@ -122,7 +122,8 @@
 }
 
 .admin {
-    margin: 0 0 0 25px !important;
+    margin: 0;
+    margin-left: 25px;
     padding: 7px 10px 6px 10px;
 
     display: flex;
@@ -229,6 +230,11 @@
 
     .logIn {
         max-width: 60%;
+    }
+
+    .admin {
+        margin: 0px;
+        margin-bottom: 10px;
     }
 
     .logo {
