--- a/styles/gamepage/reviewCard.module.css
+++ b/styles/gamepage/reviewCard.module.css
@@ -1,4 +1,6 @@
 .card {
+    position: relative;
+
     width: 90%;
     height: auto;
 
@@ -11,11 +13,15 @@
     transition: 0.25s ease-in-out;
 }
 
+.card:hover .delete {
+    display: flex;
+}
+
 .card:hover {
     background: var(--theme-color-tone-2);
 }
 
-.card__main {
+.card__main {    
     width: 100%;
 
     display: flex;
@@ -119,6 +125,61 @@
     color: var(--text-color-1);
 
     font-size: 1.25rem;
+}
+
+.card .delete {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+
+    width: 100%;
+    height: 100%;
+
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+
+    border-radius: var(--border-radius-small);
+    backdrop-filter: blur(5px);
+
+    z-index: 10;
+}
+
+.card .delete h1 {
+    max-width: 40%;
+    margin-left: 15px;
+}
+
+.card .delete a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+    padding: 5px 12px;
+    margin: 10px 15px 10px 0;
+
+    font-size: 10px;
+    font-weight: 600;
+    border-radius: var(--border-radius-small);
+
+    cursor: pointer;
+
+    transition: 0.25s ease-in-out;
+}
+
+.card .delete .edit {
+    color: var(--text-color-2);
+    background: var(--text-color-3);
+}
+
+.card .delete .remove {
+    color: rgb(75, 0, 0);
+    background: crimson;
+    border: 1px solid crimson;
+}
+
+.card .delete a:hover {
+    opacity: 0.6;
 }
 
 @media only screen and (max-width: 1200px) {
